Sat May  4 19:43:09 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libdwarf/libdwarf_lineno.c (_dwarf_get_minlen): Add
	missing support for DW_ISA_ARM.
	* current-trunk/libdwarf/libdwarf_reloc.c (_dwarf_get_reloc_type,
	_dwarf_get_reloc_size): Likewise.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/425

Sat May  4 19:33:48 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libdwarf/libdwarf_lineno.c (_dwarf_lineno_gen_program):
	Fix case of wrong line number generation + fix for a small encoding
	inefficiency.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/424

Thu May  2 23:49:54 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libdwarf/dwarf_pro_lineno.c (dwarf_add_file_decl):
	Fix off-by-one return value.
	(dwarf_add_directory_decl): Likewise.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/423

Thu May  2 23:19:08 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libdwarf/libdwarf_info.c (_dwarf_info_pro_cleanup):
	Avoid crash when no CU has been created.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/420

Wed May  1 13:44:47 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/common/elfdefinitions.h (EF_ARM_EABI_UNKNOWN): Define.
	(EF_ARM_EABI_VER1 ... EF_ARM_EABI_VER5): Likewise.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/422

Sat Apr 27 15:00:08 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sat Apr 27 14:58:00 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2938

Sun Apr 21 01:54:10 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libdwarf/Makefile (MAN): Add missing dwarf.3 and
	dwarf_add_AT_comp_dir.3 entries.
	Sent patch upstream as: